_build/html/reports/HW_05.log
Traceback (most recent call last):
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/ryan/.conda/envs/work/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/ryan/.conda/envs/work/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def cart_ode(t,r,w):
    '''cart_ode(t,r,w)
    
    Set of 2 ODEs that return dx2/dt and d^2x2/dt^2 with input
    x2 ddand dx2/dt, dr/dt = f(t,r)'''
    Parameters
    ----------
    t: current time
    r: current state [x, dx]
    w: system rotation rate [rad/s]
    Returns
    -------
    dy: derivative of current state [dx, ddx]
    '''
    dr=np.zeros(np.shape(r))
    dr[0] = r[1]
    dr[1] #= ... your equation here
    return dr
```

2. Solve the `cart_ode` initial value problem for x(0)=10 m, dx/dt(0)=0 m/s and $\omega$=0 rad/s

```python
x0=10
v0=0
w=0 # rad/s
end_time=10 # choose an end time that displays one full period

r0 = solve_ivp(lambda t,r: cart_ode(t,r,w),[0, end_time],[x0,v0])
```

3. Solve the `cart_ode` initial value problem for x(0)=3 m, dx/dt(0)=0 m/s and $\omega$=1 rad/s

```python
x0=10
v0=0
w=3
end_time=10 # choose an end time that displays one full period

r1 = solve_ivp(lambda t,r: cart_ode(t,r,w),[0, end_time],[x0,v0])
```

4. Solve the `cart_ode` initial value problem for x(0)=3 m, dx/dt(0)=0 m/s and $\omega$=2 rad/s

```python
x0=10
v0=0
w=6
end_time=10 # choose an end time that displays one full period

r2 = solve_ivp(lambda t,r: cart_ode(t,r,w),[0, end_time],[x0,v0])
```

5. Plot the three solutions together

```python
plt.plot(r0.t,r0.y[0],label='0 rad/s')
plt.plot(r3.t,r3.y[0],label='3 rad/s')
plt.plot(r6.t,r6.y[0],label='6 rad/s')
plt.legend()
```
------------------

[0;36m  File [0;32m"<ipython-input-2-403723adc774>"[0;36m, line [0;32m7[0m
[0;31m    ----------[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-403723adc774>, line 7)

